# hector_calibration

./: .gitignore  README.md
calibration_test/: .gitignore  CMakeLists.txt  package.xml
calibration_test/calibration_test/: CMakeLists.txt
calibration_test/calibration_test/src/: example.cpp
calibration_test/src/: ceres_example.cpp  example.cpp
hector_calibration_msgs/: CMakeLists.txt  package.xml
hector_calibration_msgs/msg/: CameraLidarCalibrationData.msg  CameraObservation.msg
hector_camera_lidar_calibration/: CMakeLists.txt  package.xml
hector_camera_lidar_calibration/config/: cameras.yaml
hector_camera_lidar_calibration/include/hector_camera_lidar_calibration/: data_collector.h  helper.h  mutual_information_cost.h  mutual_information_error.h  optimizer.h
hector_camera_lidar_calibration/include/hector_camera_lidar_calibration/cost_function/: first_order_mi_cost.h  mutual_information_cost.h  numeric_diff_mi_cost.h
hector_camera_lidar_calibration/launch/: argo_tracker_calibration.launch  argo_tracker_capture_data.launch  argo_tracker_manual_calibration.launch  calibrate_argo_tracker.launch  calibrate_argo_tracker_cam0.launch  calibrate_from_bag.launch  jasmine_calibration.launch  jasmine_capture_data.launch  jasmine_error_vis.launch  jasmine_manual_calibration.launch
hector_camera_lidar_calibration/src/: camera_lidar_calibration_node.cpp  data_collector.cpp  data_collector_node.cpp  error_vis_node.cpp  helper.cpp  mutual_information_cost.cpp  optimizer.cpp
hector_camera_lidar_calibration/src/cost_function/: first_order_mi_cost.cpp  mutual_information_cost.cpp  numeric_diff_mi_cost.cpp
lidar_calibration/: CMakeLists.txt  README.md  package.xml
lidar_calibration/calibrations/: argonauts_test.urdf.xacro  hector_tracker_lidar_calibration.urdf.xacro
lidar_calibration/include/lidar_calibration/: calibration.h  cloud_aggregator.h  lidar_calibration.h  point_cloud_aggregator.h  point_plane_error.h
lidar_calibration/launch/: calibrate_asterix.launch  calibrate_drz_telemax.launch  calibrate_hector_tracker.launch  calibrate_thor3.launch  calibrate_thor_multisensor_head.launch  calibration.launch  calibration_world.launch  cloud_agg.launch  start_head_simulation.launch
lidar_calibration/launch/argo_tracker_calibration/: calibrate_argo_pitch.launch  calibrate_argo_vertical.launch  calibrate_argo_vertical_only_calib.launch  calibrate_argo_vlp16.launch  calibrate_jasmine_vlp16.launch
lidar_calibration/launch/argonaut_calibration/: calibrate_argonaut_common.launch  calibrate_argonaut_rear.launch
lidar_calibration/launch/jasmine_2018_calibration/: calibrate_jasmine_vlp16.launch
lidar_calibration/launch/robot_specific/: calibrate_argonaut_rear.launch  calibrate_thor_multisensor_head.launch
lidar_calibration/launch/simulation/: calibrate_simulation.launch  cloud_agg.launch  simulation.launch  spawn_head_gazebo.launch  start_head_simulation.launch
lidar_calibration/rviz/: argo_front_lidar.rviz  lidar_calibration.rviz
lidar_calibration/scripts/: apply_calibration_to_bag.py
lidar_calibration/src/: capture_data_node.cpp  cloud_aggregator.cpp  cloud_aggregator_node.cpp  lidar_calibration.cpp  lidar_calibration_node.cpp  point_cloud_aggregator.cpp  test_node.cpp
lidar_calibration/srv/: ApplyCalibration.srv  RequestScans.srv
lidar_calibration/urdf/: hector_multisensor_head_with_error.urdf  hector_multisensor_head_with_error_new.urdf
lidar_calibration/worlds/: calibration_small.world  calibration_test.world
lidar_calibration_lib/: CMakeLists.txt  package.xml
lidar_calibration_lib/include/lidar_calibration_lib/: lidar_calibration_common.h
lidar_calibration_lib/src/: lidar_calibration_common.cpp
lidar_extrinsic_calibration/: CMakeLists.txt  package.xml
lidar_extrinsic_calibration/include/lidar_extrinsic_calibration/: lidar_extrinsic_calibration.h
lidar_extrinsic_calibration/launch/: ground_calibration.launch  ground_calibration_vlp16.launch
lidar_extrinsic_calibration/src/: lidar_extrinsic_calibration.cpp  lidar_ground_calibration_node.cpp
multi_lidar_calibration/: CMakeLists.txt  package.xml
multi_lidar_calibration/include/multi_lidar_calibration/: lidar_pose_error.h  multi_lidar_calibration.h
multi_lidar_calibration/launch/: calibrate_argonaut.launch  jasmine_2018_calibrate_back_rgbd_cam.launch  jasmine_2018_calibrate_front_rgbd_cam.launch
multi_lidar_calibration/launch/simulation/: .calibrate_simulation.launch.kate-swp  calibrate_realsense.launch  calibrate_simulation.launch  gazebo_start.launch  simulation.launch  spawn_argo_decalib.launch  spawn_head_gazebo.launch  start_head_simulation.launch  start_simulation.launch  tester.launch
multi_lidar_calibration/src/: calibration_test_node.cpp  multi_lidar_calibration.cpp  multi_lidar_calibration_node.cpp
multi_lidar_calibration/urdf/: hector_multisensor_head_standalone_no_cylinder.urdf.xacro  realsense_error.urdf
