<?xml version="1.0"?>
<package format="2">
  <name>hector_camera_lidar_calibration</name>
  <version>0.0.0</version>
  <description>The hector_camera_lidar_calibration package</description>
  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hector_camera_lidar_calibration</url> -->

  <author email="oehler@sim.tu-darmstadt.de">Martin Oehler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>camera_model_loader</depend>
  <depend>hector_calibration_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>ceres_catkin</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen_conversions</depend>
  <depend>ceres_nlopt_wrapper</depend>
</package>
