<?xml version="1.0"?>
<package>
  <name>lidar_calibration</name>
  <version>0.0.1</version>
  <description>Package for calibration of a rolling lidar.</description>

  <maintainer email="martin.sven.oehler@gmail.com">Martin Oehler</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/lidar_calibration</url> -->

  <author email="martin.sven.oehler@gmail.com">Martin Oehler</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>lidar_calibration_lib</build_depend>
  <build_depend>libceres-dev</build_depend>
    
  <run_depend>roscpp</run_depend>
  <run_depend>lidar_calibration_lib</run_depend>
  <run_depend>libceres-dev</run_depend>
  
  <export>
  </export>
</package>
