<?xml version="1.0"?>
<package format="2">
  <name>lidar_calibration</name>
  <version>0.0.1</version>
  <description>Package for calibration of a rolling lidar.</description>

  <maintainer email="ros@martinoehler.de">Martin Oehler</maintainer>

  <license>BSD</license>

  <author email="ros@martinoehler.de">Martin Oehler</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>lidar_calibration_lib</depend>
  <depend>ceres_catkin</depend>
  
  <export>
  </export>
</package>
