<?xml version="1.0"?>
<package format="2">
  <name>lidar_calibration_lib</name>
  <version>1.0.0</version>
  <description>The lidar_calibration_lib package</description>

  <maintainer email="ros@martinoehler.de">Martin Oehler</maintainer>


  <license>BSD</license>

  <author email="ros@martinoehler.de">Martin Oehler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hector_calibration_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_conversions</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
