<?xml version="1.0"?>
<package>
  <name>multi_lidar_calibration</name>
  <version>0.0.1</version>
  <description>Package for calibration of two lidars against each other.</description>

  <maintainer email="ros@martinoehler.de">Martin Oehler</maintainer>

  <license>BSD</license>

  <author email="ros@martinoehler.de">Martin Oehler</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>lidar_calibration_lib</build_depend>
  <build_depend>libceres-dev</build_depend>
  <run_depend>lidar_calibration_lib</run_depend>
  <run_depend>libceres-dev</run_depend>

  <export>
  </export>
</package>
